Fixed CSS overflow problem on editor screen

--- a/app/indexpage.module.scss
+++ b/app/indexpage.module.scss
@@ -3,7 +3,7 @@
   grid-row: slh-start / srh-end;
   grid-column: slh-start / srh-end;
   background-color: $primary-dark-blue;
-  height: 90px;
+  height: 10vh;
 }
 
 #mainLogo {
